--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@
           <div class="portrait reveal" aria-label="Professional portrait">
             <!-- Replace src with your photo: assets/profile.jpg -->
             <img
-              src="assets/profile.jpeg"
+              src="assets/profile1.jpeg"
               alt="Portrait of Blessed Mukundi Mangena"
               onerror="this.replaceWith(document.getElementById('pf-fallback').content.cloneNode(true))"
             />
